# nats-micro

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: performance.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: error_decoding.rs  subject_matching.rs
nats-micro/: .gitignore  Cargo.toml
nats-micro-cli/: Cargo.toml
nats-micro-cli/src/: main.rs
nats-micro-cli/tests/: commands.rs
nats-micro-macros/: Cargo.toml
nats-micro-macros/src/: app_state.rs  application.rs  client.rs  consumer.rs  endpoint.rs  lib.rs  main.rs  message.rs  napi.rs  object.rs  service.rs  service_error.rs  test.rs  util.rs  utils.rs
nats-micro-macros/src/service/: args.rs  classify.rs  client.rs  consumer.rs  contract.rs  dispatch.rs  local.rs  metadata.rs  mod.rs  napi.rs  parse.rs  startup.rs  tests.rs  validate.rs
nats-micro-macros/src/service_error/: client.rs  display.rs  mod.rs  parse.rs  wire.rs
nats-micro-macros/src/tests/: client_tests.rs  consumer_tests.rs  endpoint_tests.rs  napi_tests.rs  service_error_tests.rs  service_tests.rs
nats-micro-shared/: Cargo.toml
nats-micro-shared/src/: lib.rs
nats-micro-testing/: Cargo.toml
nats-micro-testing/src/: jetstream.rs  lib.rs
nats-micro/benches/: README.md  request_dispatch.rs
nats-micro/examples/: application.rs  in_memory.rs  live.rs  minimal.rs  stateful.rs
nats-micro/src/: auth.rs  client.rs  codec.rs  consumer.rs  contract.rs  deployment.rs  error.rs  extractors.rs  handler.rs  lib.rs  message.rs  napi_support.rs  prelude.rs  request.rs  response.rs  service.rs  shutdown_signal.rs  spec.rs  state_ref.rs  static_app.rs  subject.rs  telemetry.rs  testing.rs  trace.rs  utils.rs
nats-micro/src/app/: config.rs  limits.rs  mod.rs  prepare.rs  services.rs  shutdown.rs  tests.rs  typed.rs  typed_config.rs  typed_runtime.rs  workers.rs
nats-micro/src/client/: mod.rs  transport.rs  v2.rs
nats-micro/src/encryption/: headers.rs  mod.rs  payload.rs  request.rs
nats-micro/src/runtime/: consumer_worker.rs  mod.rs  request_worker.rs  subscription_worker.rs
nats-micro/src/testing/: live.rs
nats-micro/tests/: allocation_baseline.rs  client_errors.rs  contract_json.rs  encryption_dispatch.rs  encryption_primitives.rs  error_responses.rs  extractors.rs  live_runtime.rs  miri_local_router.rs  prelude.rs  static_core_ui.rs  static_runtime.rs  ui.rs  v2_service_macro.rs  v2_ui.rs  v3_typed_app_client.rs  v4_in_memory.rs  v4_ui.rs  v5_jetstream_simulator.rs  v5_live.rs  v6_contract_deployment.rs  v6_encryption.rs  v6_napi_live.rs  v6_observability.rs
nats-micro/tests/fixtures/: README.md  v6-contract.json
nats-micro/tests/fixtures/consumer-jetstream/: Cargo.toml
nats-micro/tests/fixtures/consumer-jetstream/src/: lib.rs
nats-micro/tests/fixtures/encryption-client/: Cargo.toml
nats-micro/tests/fixtures/encryption-client/src/: main.rs
nats-micro/tests/fixtures/existing-thiserror-service-error/: Cargo.toml
nats-micro/tests/fixtures/existing-thiserror-service-error/src/: main.rs
nats-micro/tests/fixtures/generated-client-app/: Cargo.toml
nats-micro/tests/fixtures/generated-client-app/src/: main.rs
nats-micro/tests/fixtures/napi-surface/: Cargo.toml
nats-micro/tests/fixtures/napi-surface/src/: main.rs
nats-micro/tests/fixtures/no-default-features-service/: Cargo.toml
nats-micro/tests/fixtures/no-default-features-service/src/: main.rs
nats-micro/tests/fixtures/no-direct-async-nats/: Cargo.toml
nats-micro/tests/fixtures/no-direct-async-nats/src/: main.rs
nats-micro/tests/fixtures/no-direct-thiserror-service-error/: Cargo.toml
nats-micro/tests/fixtures/no-direct-thiserror-service-error/src/: main.rs
nats-micro/tests/fixtures/raw-thiserror-direct-dep/: Cargo.toml  README.md
nats-micro/tests/fixtures/raw-thiserror-direct-dep/src/: main.rs
nats-micro/tests/fixtures/raw-thiserror-reexport/: Cargo.toml
nats-micro/tests/fixtures/renamed-dependency-full/: Cargo.toml
nats-micro/tests/fixtures/renamed-dependency-full/src/: main.rs
nats-micro/tests/fixtures/renamed-nats-micro-service-error/: Cargo.toml
nats-micro/tests/fixtures/renamed-nats-micro-service-error/src/: main.rs
nats-micro/tests/fixtures/runtime-roundtrip/: Cargo.toml
nats-micro/tests/fixtures/runtime-roundtrip/src/: lib.rs
nats-micro/tests/fixtures/service-authoring-basic/: Cargo.toml
nats-micro/tests/fixtures/service-authoring-basic/src/: main.rs
nats-micro/tests/ui/: consumer_invalid_ack_policy.rs  consumer_invalid_concurrency_limit.rs  consumer_invalid_concurrency_limit.stderr  consumer_invalid_config.rs  consumer_invalid_config.stderr  consumer_loose_function.rs  consumer_missing_stream.rs  consumer_missing_stream.stderr  endpoint_custom_param.rs  endpoint_extra_param.rs  endpoint_loose_function.rs  endpoint_loose_function.stderr  endpoint_missing_params.rs  endpoint_missing_params.stderr  endpoint_nested_encrypted_response.rs  endpoint_nested_encrypted_response.stderr  endpoint_nested_optional_payload.rs  endpoint_nested_optional_payload.stderr  endpoint_nested_optional_response.rs  endpoint_nested_optional_response.stderr  endpoint_plain_response_missing_serialize.rs  endpoint_plain_response_missing_serialize.stderr  endpoint_underscore_params.rs  service_client_collection_responses.rs  service_client_generation.rs  service_client_optional_payloads.rs  service_client_optional_responses.rs  service_concurrency_limits.rs  service_error_after_derive_not_supported.rs  service_error_after_derive_not_supported.stderr  service_error_duplicate_code.rs  service_error_duplicate_code.stderr  service_error_duplicate_generic_internal_kind.rs  service_error_duplicate_generic_internal_kind.stderr  service_error_duplicate_kind.rs  service_error_duplicate_kind.stderr  service_error_duplicate_kind_attr.rs  service_error_duplicate_kind_attr.stderr  service_error_duplicate_source.rs  service_error_duplicate_source.stderr  (+113 more)
nats-server/: Cargo.toml
nats-server/configs/: auth.conf  jetstream.conf
nats-server/src/: lib.rs
scripts/: bench-live.sh  check-fixture-manifests.sh  check.sh  release-check.sh  runtime-check.sh
src/: app.rs  (+23 more)
(+44 files in other folders)
