[workspace]
members = [
    "nats-micro-macros",
    "nats-micro",
    "nats-micro-shared",
    "nats-micro-testing",
    "nats-micro-cli",
    "nats-server",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates
nats-micro-macros = { path = "nats-micro-macros", version = "1.0.0", default-features = false }
nats-micro-shared = { path = "nats-micro-shared", version = "1.0.0" }
nats-micro-testing = { path = "nats-micro-testing", version = "1.0.0" }
nats-server = { path = "nats-server", version = "1.0.0" }

# Runtime/shared
anyhow = ">=1, <2"
async-nats = { version = "0.49.1", default-features = false, features = ["ring"] }
base64 = ">=0.22, <0.23"
bytes = ">=1, <2"
futures-util = ">=0.3, <0.4"
prost = ">=0.13, <1"
serde = { version = ">=1, <2", features = ["derive"] }
serde_json = ">=1, <2"
thiserror = "2.0.18"
tokio = ">=1, <2"
tracing = ">=0.1, <0.2"
tracing-subscriber = ">=0.3, <0.4"
uuid = ">=1, <2"

# Encryption / crypto
chacha20poly1305 = ">=0.11, <0.12"
hmac = ">=0.12, <0.13"
rand = ">=0.10, <0.11"
sha2 = ">=0.10, <0.11"
x25519-dalek = ">=3, <4"
zeroize = ">=1, <2"

# NAPI
napi = ">=3.8.4, <4"
napi-derive = ">=3.0.0, <4"

# Proc macro
darling = "0.23"
heck = ">=0.5.0, <0.6"
proc-macro-crate = "3.5.0"
proc-macro2 = "1"
quote = "1"
syn = "2"

# nats-server helper crate
nuid = "0.5"
regex = { version = ">=1.7.1, <2", default-features = false, features = [
    "std",
    "unicode-perl",
] }
tokio-retry = "0.3.0"
url = "2"
workspace_root = "0.2.0"

# Tests
criterion = "0.8.2"
trybuild = ">=1, <2"
