[package]
name = "nats-micro-cli"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "nats-micro"
path = "src/main.rs"

[dependencies]
nats-micro = { path = "../nats-micro", default-features = false }
serde_json = { workspace = true }

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
