[package]
name = "nats-micro-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
macros_client_feature = []
macros_encryption_feature = []
macros_napi_feature = ["macros_client_feature"]

[dependencies]
darling = "0.23"
heck = "0.5.0"
proc-macro-crate = "3.5.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
nats-micro-shared = { path = "../nats-micro-shared" }

[lints.clippy]
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
pedantic    = { priority = -1, level = "deny" } #
perf         = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

single_call_fn = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
shadow_reuse = "allow"
question_mark_used = "allow"
