[package]
name = "nats-micro-macros"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/giddyos/nats-micro"
description = "Procedural macros for nats-micro services, handlers, clients, consumers, objects, and service errors"
readme = "../README.md"
keywords = ["nats", "microservices", "macros", "rpc"]
categories = ["asynchronous", "network-programming"]

[lib]
proc-macro = true

[features]
macros_client_feature = []
macros_encryption_feature = []
macros_napi_feature = ["macros_client_feature"]
macros_test_util_feature = []

[dependencies]
darling = { workspace = true }
heck = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
nats-micro-shared = { workspace = true }

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

single_call_fn = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
shadow_reuse = "allow"
question_mark_used = "allow"
