[package]
name = "nats-micro-testing"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/giddyos/nats-micro"
description = "Test-only event, fault, and tracing support for nats-micro"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
nats-micro-shared = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

single_call_fn = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
shadow_reuse = "allow"
question_mark_used = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
double_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
