[package]
name = "nats-micro"
version = "0.1.0"
edition = "2024"

[features]
default = ["encryption", "client", "napi"]
client = ["nats-micro-macros/macros_client_feature"]
napi = [
    "client",
    "nats-micro-macros/macros_napi_feature",
    "dep:napi",
    "dep:napi-derive",
]
encryption = [
    "nats-micro-macros/macros_encryption_feature",
    "dep:x25519-dalek",
    "dep:chacha20poly1305",
    "dep:hkdf",
    "dep:sha2",
    "dep:hmac",
    "dep:base64",
    "dep:zeroize",
    "dep:rand",
]

[dependencies]
async-nats = { version = ">=0.47, <0.50", features = ["service", "jetstream"] }
inventory = ">=0.3, <0.4"
nats-micro-macros = { path = "../nats-micro-macros", default-features = false }

tokio = { version = ">=1, <2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
futures = ">=0.3, <0.4"
bytes = ">=1, <2"
serde = { version = ">=1, <2", features = ["derive"] }
serde_json = ">=1, <2"
prost = ">=0.13, <1"
thiserror = ">=1, <2"
anyhow = ">=1, <2"
tracing = ">=0.1, <0.2"
uuid = { version = ">=1, <2", features = ["v7", "serde"] }

x25519-dalek = { version = ">=2, <3", optional = true, features = [
    "static_secrets",
    "zeroize",
] }
chacha20poly1305 = { version = ">=0.10, <0.11", optional = true }
hkdf = { version = ">=0.12, <0.13", optional = true }
sha2 = { version = ">=0.10, <0.11", optional = true }
hmac = { version = ">=0.12, <0.13", optional = true }
base64 = { version = ">=0.22, <0.23", optional = true }
zeroize = { version = ">=1, <2", optional = true, features = ["derive"] }
rand = { version = ">=0.8, <0.9", optional = true }
tokio-util = ">=0.7.18, <0.8"
napi = { version = ">=3.8.4, <4", optional = true, features = [
    "async",
    "serde-json",
] }
napi-derive = { version = ">=3.0.0, <4", optional = true }
heck = ">=0.5.0, <0.6"
nats-micro-shared = { path = "../nats-micro-shared" }

[dev-dependencies]
trybuild = ">=1, <2"
rand = ">=0.8, <0.9"
nats-server = { path = "../nats-server" }

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

single_call_fn = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
shadow_reuse = "allow"
question_mark_used = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
double_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
