[package]
name = "nats-micro"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/giddyos/nats-micro"
description = "NATS microservice framework with service macros, generated clients, typed errors, consumers, and optional encryption"
readme = "../README.md"
keywords = ["nats", "microservices", "async", "rpc", "jetstream"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = ["encryption", "client"]
client = ["nats-micro-macros/macros_client_feature"]
napi = [
    "client",
    "nats-micro-macros/macros_napi_feature",
    "dep:napi",
    "dep:napi-derive",
]
encryption = [
    "nats-micro-macros/macros_encryption_feature",
    "dep:x25519-dalek",
    "dep:chacha20poly1305",
    "dep:sha2",
    "dep:hmac",
    "dep:base64",
    "dep:zeroize",
    "dep:rand",
]
test-util = [
    "dep:nats-micro-testing",
    "nats-micro-macros/macros_test_util_feature",
    "tokio/test-util",
]
live-test = ["test-util", "dep:nats-server"]
test-jetstream = ["test-util"]

[dependencies]
async-nats = { workspace = true, features = ["service", "jetstream", "kv"] }
inventory = { workspace = true }
nats-micro-macros = { workspace = true }

tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7", "serde"] }

x25519-dalek = { workspace = true, optional = true, features = [
    "getrandom",
    "static_secrets",
    "zeroize",
] }
chacha20poly1305 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true, features = ["derive"] }
rand = { workspace = true, optional = true }
tokio-util = { workspace = true }
napi = { workspace = true, optional = true, features = [
    "async",
    "serde-json",
] }
napi-derive = { workspace = true, optional = true }
heck = { workspace = true }
nats-micro-shared = { workspace = true }
nats-micro-testing = { workspace = true, optional = true }
nats-server = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
trybuild = { workspace = true }
rand = { workspace = true }
nats-server = { workspace = true }

[[bench]]
name = "request_dispatch"
harness = false

[[example]]
name = "in_memory"
required-features = ["test-util"]

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

single_call_fn = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
shadow_reuse = "allow"
question_mark_used = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
double_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
