[package]
name = "nats-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
regex = { workspace = true, default-features = false, features = [
    "std",
    "unicode-perl",
] }
url = { workspace = true }
serde_json = { workspace = true }
nuid = { workspace = true }
rand = { workspace = true }
tokio-retry = { workspace = true }
workspace_root = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
