[package]
name = "nats-server"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/giddyos/nats-micro"
description = "Test helper for launching local nats-server processes"
readme = "../README.md"
keywords = ["nats", "testing"]
categories = ["development-tools::testing"]

[dependencies]
regex = { workspace = true, default-features = false, features = [
    "std",
    "unicode-perl",
] }
url = { workspace = true }
serde_json = { workspace = true }
nuid = { workspace = true }
rand = { workspace = true }
tokio-retry = { workspace = true }
workspace_root = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
